# Ivaldi

./: .gitattributes  .gitignore  .golangci.yml  .ivaldi_upload_IVALDI_STATE.md  .ivaldiignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  DOCUMENTATION.md  Makefile  README.md  SECURITY.md  VERSIONING.md  benchmark_mirror.go  demo_jump_improvements.sh  deny.toml  go.mod  go.sum  ivaldi-github.sh  lazy.toml  package-lock.json  test-branch-file.txt  test_jump_improvements.md
.github/workflows/: ci.yml  fuzz.yml  mirror  release.yml
cmd/chunking-demo/: main.go
cmd/ivaldi/: main.go
core/apperrors/: errors.go
core/chunks/: fastcdc.go
core/commands/: natural.go
core/config/: config.go
core/errors/: errors.go
core/fuse/: fuse.go
core/health/: health.go
core/logging/: logger.go
core/mesh/: manager.go  mesh.go  procalive_unix.go  procalive_windows.go  services.go  services_test.go  state.go
core/metrics/: metrics.go
core/network/: network.go
core/objects/: types.go
core/overwrite/: tracking.go
core/p2p/: adapters.go  config.go  discovery.go  events.go  http_p2p_server.crl  interfaces.go  manager.go  network.go  procalive_unix.go  procalive_windows.go  state.go  sync.go  websocket_bridge.go  websocket_bridge_unix.go  websocket_bridge_windows.go  websocket_manager.go  websocket_server.crl
core/position/: position.go
core/preservation/: preservation.go
core/references/: references.go  references.go.backup
core/reshape/: reshape.go
core/search/: search.go
core/sync/: sync.go
docs/: BUTTERFLY_FEATURE.md  CHANGELOG.md  CONFIG_COMMAND.md  DEMO_WORKFLOW.md  DOCUMENTATION.md  GHOSTTY_SETUP.md  IMPLEMENTATION_STATUS.md  IVALDIIGNORE.md  IVALDI_USAGE.md  MIRROR_OPTIMIZATION.md  P2P_FEATURES.md  README.md  RECENT_UPDATES.md  REFERENCE.md  REVOLUTIONARY_DEMO.md  REVOLUTIONARY_DEMO_COMPLETE.md  SHELL_INTEGRATION.md  SQUASH_COMMAND.md  SYNC_ARCHITECTURE.md  SYNC_COMMAND.md  SYNC_QUICK_REFERENCE.md  TUTORIAL.md  atomic_io.md  auth.md  butterfly.md  cas.md  cli.md  color.md  config.md  dogfooding.md  filechunk.md  forge.md  fsmerkle.md  fuse.md  git_export.md  git_pack_writer.md  github.md  gitlab.md  hamt.md  hash.md  (+36 more)
forge/: enhanced.go  repository.go  repository_optimized.go
fuzz/: Cargo.toml
fuzz/fuzz_targets/: apply_delta.rs  byte_reader.rs  git_apply_delta.rs  git_parse_packfile.rs  parse_blob.rs  parse_hamt_node.rs  parse_leaf.rs  parse_tree.rs
scripts/: INSTALL_PROMPT.md  example-bashrc.sh  example-zshrc.sh  ghostty-setup.sh  ivaldi-prompt.sh  mirror-to-git.sh  pre-commit.sh  quick-setup.sh
src/: atomic_io.rs  auth.rs  bisect.rs  butterfly.rs  cas.rs  color.rs  config.rs  diff.rs  failpoint.rs  filechunk.rs  forge.rs  fsmerkle.rs  fuse.rs  gc.rs  git_export.rs  git_pack_writer.rs  git_remote.rs  github.rs  gitlab.rs  hamt.rs  hash.rs  hooks.rs  identity.rs  ignore.rs  known_peers.rs  leaf.rs  lib.rs  lock.rs  log.rs  logging.rs  main.rs  migration.rs  mmr.rs  oauth_device.rs  p2p.rs  p2p_proto.rs  pack.rs  peers.rs  pick.rs  portal.rs  (+21 more)
tests/: butterfly_test.go  chunking_test.go  cli_smoke.rs  concurrent_writers.rs  crash_matrix.rs  crash_matrix_maintenance.rs  crash_matrix_ops.rs  debug_p2p_test.go  empty_repository_test.go  hamt_bench.rs  hamt_integration.rs  hamt_props.rs  p2p_basic_conflict_test.go  p2p_conflict_test.go  p2p_manager_test.go  p2p_stress_test.go  p2p_test.go  position_test.go  repository_migration.rs  repository_test.go  robust_p2p_test.go  roundtrip.rs  seal_creation_test.go  simple_p2p_test.go  store_basic_test.go  sync_import.rs  test_sync.sh  timeline_test.go  workspace_enhanced_test.go
(+83 files in other folders)
