[package]
name = "ivaldi"
version = "0.1.0"
edition = "2024"
description = "Ivaldi Version Control System"

[dependencies]
blake3 = "1"
hex = "0.4"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
redb = "2"
ureq = { version = "2", features = ["json"] }
base64 = "0.22"
ratatui = "0.29"
crossterm = "0.28"

[dev-dependencies]
tempfile = "3"
