[package]
name = "ivaldi"
version = "0.1.1"
edition = "2024"
description = "Ivaldi Version Control System"

[dependencies]
blake3 = "1"
hex = "0.4"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
redb = "4.1.0"
ureq = { version = "3.3.0", features = ["json"] }
base64 = "0.22"
ratatui = "0.30"
crossterm = "0.29"
indicatif = "0.18.4"
rayon = "1"
flate2 = "1"

[dev-dependencies]
tempfile = "3"
