[package]
name = "ivaldi"
version = "0.1.1"
edition = "2024"
description = "Ivaldi Version Control System"
license = "AGPL-3.0-only"
readme = "README.md"
repository = "https://github.com/javanhut/ivaldi"
homepage = "https://github.com/javanhut/ivaldi"
rust-version = "1.89"
keywords = ["version-control", "vcs", "git", "distributed"]
categories = ["command-line-utilities", "development-tools"]

[features]
# Test-only deterministic crash injection (see src/failpoint.rs and
# tests/crash_matrix.rs). Never enable in release builds.
failpoints = []

[dependencies]
blake3 = "1"
hex = "0.4"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
clap_mangen = "0.2"
redb = "4.1.0"
ureq = { version = "3.3.0", features = ["json"] }
base64 = "0.22"
ratatui = "0.30"
crossterm = "0.29"
indicatif = "0.18.4"
rayon = "1"
flate2 = "1"
prost = "0.14"
sha1 = "0.10"
snow = "0.9"
rand_core = { version = "0.6", features = ["getrandom"] }

[target.'cfg(unix)'.dependencies]
rustix = { version = "1", features = ["fs", "std"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
] }

[dev-dependencies]
tempfile = "3"
